apis/deployments/angular/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
  - port: 80
    targetPort: 80
