apis/deployments/angular/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  labels:
    name: front-end-ingress
spec:
  rules:
  - host: app.hypertheory.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end-service
            port: 
              number: 80
